# thc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: thc.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decompress.rs
samples/inputs/: 10.u64  100.u64  1000.u64  10000.u64  100000.u64
samples/outputs/: 10.cht  100.cht  1000.cht  10000.cht  100000.cht
src/: cht.rs  error.rs  header.rs  lib.rs
